--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -2,9 +2,27 @@
 <div>
 
 <div *ngFor="let project of projects">
-  <div (click)="this.selectProjEvent(project.title)">{{project.title}}</div>
-  <div (click)="this.editProjEvent(project.title)"> Edit </div>
-  <div (click)="this.selectProjEvent(project.title)">{{project.description}}</div>
+
+  <div class="bar">
+    <div class="left">
+        <div class="title left clickable" (click)="this.selectProjEvent(project.title)">{{project.title}}</div>
+        <div class="clickable" (click)="this.editProjEvent(project.title)"> Edit </div>
+    </div>
+    <div class="right">
+      <div class="space"></div>
+      <div class="progress"></div>
+    </div>
+    <div class="footer">
+      <div class="button clickable">Overview</div>
+      <div class="separator"></div>
+      <div class="button clickable">My Tasks</div>
+      <div class="separator"></div>
+      <div class="button clickable">Unassigned</div>
+    </div>
+  </div>
+
+  <div class="space"></div>
+
 </div>
 
 </div>
