--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <h1>Dockit</h1>
 </div>
 
+<p> editProject : {{editProject}} </p>
+
 <div *ngIf="showProjectSideBar()">
   <app-project-side-bar [project]="this.selectedProject"></app-project-side-bar>
 </div>
