--- a/src/app/project-side-bar/project-side-bar.component.html
+++ b/src/app/project-side-bar/project-side-bar.component.html
@@ -1,3 +1,28 @@
-<p>
-  Project Title: {{project.title}}
-</p>
+
+<div class="wrapper">
+
+<div class="title"> {{project.title}}</div>
+<div class="small-space"></div>
+<div> This is a short project description. Just one or two sentences, to explain what's going on. </div>
+
+<div class="space"></div>
+
+<div *ngIf="this.project.assignedTo.length == 0">
+  No collaborators working on this project.</div>
+<div *ngIf="this.project.assignedTo.length == 1">
+  {{this.project.assignedTo.length[0]}} is the only one collaborating on this project.</div>
+<div *ngIf="this.project.assignedTo.length == 2">
+  {{this.project.assignedTo[0]}} and {{this.project.assignedTo[1]}} are collaborating on this projects.</div>
+<div *ngIf="this.project.assignedTo.length == 3">
+  {{this.project.assignedTo[0]}}, {{this.project.assignedTo[1]}}, and {{this.project.assignedTo[2]}} are collaborating on this projects.</div>
+<div *ngIf="this.project.assignedTo.legnth > 3">
+  {{this.project.assignedTo[0]}}, {{this.project.assignedTo[1]}}, and {{this.project.assignedTo.length - 2}} more are collaborating on this project.</div>
+
+<div class="space"></div>
+
+<div class="button">Edit Project</div>
+<div class="small-space"></div>
+<div class="button">Delete Project</div>
+
+
+</div>
