--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,10 +1,28 @@
 
 <div>
 
-  <p> Task List </p>
+<div *ngFor="let project of tasks">
 
-<div *ngFor="let task of tasks">
-  <div> {{task.title}} </div>
+  <div class="bar">
+    <div class="float-wrapper">
+      <div class="left">
+          <div class="title left clickable">{{project.title}}</div>
+      </div>
+      <div class="right">
+        <div class="space"></div>
+        <div class="progress"></div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="button clickable">Edit Task</div>
+      <div class="separator"></div>
+      <div class="button clickable">Delete Task</div>
+    </div>
+
+  </div>
+
+  <div class="space"></div>
+
 </div>
 
 </div>
