--- a/src/app/project-side-bar/project-side-bar.component.html
+++ b/src/app/project-side-bar/project-side-bar.component.html
@@ -20,9 +20,9 @@
 
 <div class="space"></div>
 
-<div class="button">Edit Project</div>
+<div class="button clickable">Edit Project</div>
 <div class="small-space"></div>
-<div class="button">Delete Project</div>
+<div class="button clickable">Delete Project</div>
 
 
 </div>
