--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <div class="bar">
-  <div class="dockit">Dockit</div>
+  <div class="dockit"> <div>
+Dockit <sub>Flexible Team Project Management</sub></div>
+  </div>
   <div class="button clickable">Logout</div>
   <div class="button clickable">View Projects</div>
 </div>
