--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 
 <div class="bar">
-  <div class="dockit"> <div>
-Dockit <sub>Flexible Team Project Management</sub></div>
-  </div>
+  <div class="dockit">Dockit</div>
   <div class="button clickable">Logout</div>
-  <div class="button clickable">View Projects</div>
+  <div *ngIf="!showProjectList()" class="button clickable" (click)="viewProjectList()">Projects</div>
 </div>
 
 <div class="space"></div>
@@ -18,13 +16,13 @@ Dockit <sub>Flexible Team Project Management</sub></div>
 </div>
 
 
-<div class="row" *ngIf="showProjectSideBar()">
+<div class="row" *ngIf="showProjectSideBar()" style="width:100%">
   <div class="col-md-2">
-      <app-project-side-bar [project]="this.selectedProject"></app-project-side-bar>
+      <app-project-side-bar [project]="this.selectedProject" (filterEvent)="receiveFilterEvent($event)"></app-project-side-bar>
   </div>
 
   <div class="col-md-10" *ngIf="!showProjectList() && !showEditTask() && !showEditProject()">
-    <app-task-list [tasks]="this.selectedProject.tasks"></app-task-list>
+    <app-task-list [tasks]="this.selectedProject.tasks" [filter]="this.taskFilter"></app-task-list>
   </div>
 
   <div class="col-md-10" *ngIf="showEditTask()" class="container">
