--- a/src/app/task-editor/task-editor.component.html
+++ b/src/app/task-editor/task-editor.component.html
@@ -13,7 +13,7 @@
         <hr>
       </div>
     </div>
-    
+
   </div>
   <div class="form-group">
     <label for="timeSpent">Time Spent (Hours):</label>
@@ -23,6 +23,6 @@
     <label for="timeLeft">Time Left (Hours):</label>
     <input type="number" class="form-control" id="timeLeft" value="{{task.timeLeft}}">
   </div>
-  <button type="button" class="btn btn-outline-primary btn-block">Update Task</button>
-  <button type="button" class="btn btn-outline-danger btn-block">Delete Task </button>
+  <button type="button" class="btn btn-outline-primary btn-block" (click)="updateTask()">Update Task</button>
+  <button type="button" class="btn btn-outline-danger btn-block" (click)="deleteTask()">Delete Task </button>
 </form>
