--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@
 
 .add-button {
   position: fixed;
-  bottom: 50px;
+  bottom: 25px;
   right: 50px;
   width: 100px;
   border-radius: 20px;
@@ -18,6 +18,10 @@
   font-weight: bold;
   text-align: center;
   vertical-align: middle;
+
+  -webkit-box-shadow: 3px 3px 10px 0px rgba(80,101,109,0.8);
+  -moz-box-shadow: 3px 3px 10px 0px rgba(80,101,109,0.8);
+  box-shadow: 3px 3px 10px 0px rgba(80,101,109,0.8);
 }
 
 .button {
