editor now edits

--- a/src/app/project-editor/project-editor.component.html
+++ b/src/app/project-editor/project-editor.component.html
@@ -2,15 +2,18 @@
   <form>
     <div class="form-group">
       <label for="title">Project Title:</label>
-      <input type="text" class="form-control" id="title" value="{{project.title}}">
+      <input [(ngModel)]="project.title" class="form-control" name="title">
     </div>
     <div class="form-group">
       <label for="assignedTo">Assigned To:</label>
-      <input type="text" class="form-control" id="assignedTo" placeholder="Search for Company Employee">
+      <input type="text" class="form-control" (input)="filterUsers()" [(ngModel)]='searchName' name="assignedTo"
+        placeholder="Search for Company Employee">
       <hr>
       <div style="height: 200px; overflow-y:auto">
         <div *ngFor="let user of users">
-          <input type="checkbox"> {{user.name}}
+          <input type="checkbox" [checked]="isAssignedToProject(user)"
+          (click)="setAssignment(user, !isAssignedToProject(user))"> 
+          {{user.name}}
           <hr>
         </div>
       </div>
@@ -18,10 +21,12 @@
     </div>
     <div class="form-group">
       <label for="description">Project Description:</label>
-      <textarea class="form-control" rows="5" id="description" value="{{project.description}}"></textarea>
+      <textarea class="form-control" rows="5" name="description" [(ngModel)]="project.description"></textarea>
     </div>
 
-    <button type="button" class="btn btn-outline-primary btn-block">Update Project</button>
+    <button type="button" class="btn btn-outline-primary btn-block" (click)="this.updateProject()">Update
+      Project</button>
     <button type="button" class="btn btn-outline-danger btn-block">Delete Project </button>
+
   </form>
 </div>
