--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
+form label{
+  font-size: 20px;
+  font-family: sans-serif;
+}
+
+.container{
+  background-color:white;
+  padding: 20px;
+}
+
+
 .light_background {
   background-color: #E1EBF2;
 }
