--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -6,9 +6,9 @@
       </div>
       <div class="title left clickable" (click)="this.selectProject(project.title)">{{project.title}}</div>
       <div class="footer btn-group">
-        <div class="btn btn-primary" (click)="this.selectProject(project.title)">View Tasks</div>
-        <div class="btn btn-primary" (click)="this.editProject(project.title)">Edit Project</div>
-        <div class="btn btn-primary" (click)="this.deleteProject(project.title)">Delete Project</div>
+        <div class="btn" (click)="this.selectProject(project.title)">View Tasks</div>
+        <div class="btn" (click)="this.editProject(project.title)">Edit Project</div>
+        <div class="btn" (click)="this.deleteProject(project.title)">Delete Project</div>
       </div>
   </div>
 
