change background color

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
   --backgroundColor: white;
-  --lightContrastColor: #b3e6fc;
+  --lightContrastColor: #E1EBF2;
   --darkContrastColor: rgb(77, 77, 77);
   --foregroundColor: black;
 
