--- a/src/app/project-editor/project-editor.component.html
+++ b/src/app/project-editor/project-editor.component.html
@@ -23,9 +23,9 @@
       <textarea class="form-control" rows="5" name="description" [(ngModel)]="project.description"></textarea>
     </div>
 
-    <button type="button" class="btn btn-outline-primary btn-block" (click)="this.updateProject()">Update
+    <button type="button" class="btn btn-block" (click)="this.updateProject()">Update
       Project</button>
-    <button type="button" class="btn btn-outline-danger btn-block">Delete Project </button>
+    <button type="button" class="btn btn-block">Delete Project </button>
 
   </form>
 </div>
