--- a/src/app/project-side-bar/project-side-bar.component.css
+++ b/src/app/project-side-bar/project-side-bar.component.css
@@ -13,8 +13,8 @@
 }
 
 .buttons {
+  margin-top: 20px;
   clear: both;
-  position: absolute;
   bottom: 25px;
 }
 
@@ -43,7 +43,6 @@
 
 .wrapper {
   background: white;
-  height: 600px;
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 15px;
