--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,29 +1,21 @@
 
-<div style=" overflow-y: auto; height:100%"> 
+<div style="overflow-y: auto;"> 
 <div style="display: inline-block; width: 100%;" *ngFor="let task of getTasks()">
 
   <div class="bar">
-    <div class="float-wrapper">
-      <div class="left">
-          <div class="title left clickable">{{task.title}}</div>
-      </div>
-      <div class="right">
-        <div class="space"></div>
+    <div class="float-right">
         <div class="progress">
             <div class="progress-bar" [ngStyle]="{'width': getProgress(task.title) + '%'}"></div>
         </div>
         <div class="time" *ngIf="(task.timeLeft > 0) && (task.timeLeft <= 1)">1 hour left</div>
         <div class="time" *ngIf="task.timeLeft != 1">{{task.timeLeft}} hours left</div>
+    </div>
+    <div class="title clickable">{{task.title}}</div>
+    <div class="btn-group">
+        <div class="btn" (click)="this.editTask(task)">Edit Task</div>
+        <div class="btn" (click)="this.deleteTask(task)">Delete Task</div>
       </div>
-    </div>
-    <div class="footer">
-      <div class="button clickable" (click)="this.editTask(task)">Edit Task</div>
-      <div class="separator"></div>
-      <div class="button clickable" (click)="this.deleteTask(task)">Delete Task</div>
-    </div>
-
   </div>
-
 </div>
 
 <div *ngIf="getTasks().length == 0">No tasks to display. (Note: filter application is under construction.)</div>
