--- a/src/app/task-editor/task-editor.component.html
+++ b/src/app/task-editor/task-editor.component.html
@@ -1,27 +1,29 @@
 <form>
   <div class="form-group">
     <label for="title">Task Title:</label>
-    <input type="text" class="form-control" id="title" value="{{task.title}}">
+    <input type="text" class="form-control" name="title" [(ngModel)]="updatedTask.title">
   </div>
   <div class="form-group">
     <label for="assignedTo">Assigned To:</label>
-    <input type="text" class="form-control" id="assignedTo" placeholder="Search for Company Employee">
+    <input type="text" class="form-control" [(ngModel)]='searchName' name="assignedTo"
+      placeholder="Search for Company Employee">
     <hr>
     <div style="height: 200px; overflow-y:auto">
-      <div *ngFor="let user of users">
-        <input type="checkbox"> {{user.name}}
+      <div *ngFor="let user of getFilteredUsers()">
+        <input type="checkbox" [checked]="isAssignedToTask(user)"
+        (click)="setAssignment(user, !isAssignedToTask(user))">
+        {{user.name}}
         <hr>
       </div>
     </div>
-
   </div>
   <div class="form-group">
     <label for="timeSpent">Time Spent (Hours):</label>
-    <input type="number" class="form-control" id="timeSpent" value="{{task.timeSpent}}">
+    <input type="number" class="form-control" name="timeSpent" [(ngModel)]=="updatedTask.timeSpent">
   </div>
   <div class="form-group">
     <label for="timeLeft">Time Left (Hours):</label>
-    <input type="number" class="form-control" id="timeLeft" value="{{task.timeLeft}}">
+    <input type="number" class="form-control" name="timeLeft" [(ngModel)]=="updatedTask.timeLeft">
   </div>
   <button type="button" class="btn btn-outline-primary btn-block" (click)="updateTask()">Update Task</button>
   <button type="button" class="btn btn-outline-danger btn-block" (click)="deleteTask()">Delete Task </button>
