--- a/src/app/project-side-bar/project-side-bar.component.html
+++ b/src/app/project-side-bar/project-side-bar.component.html
@@ -19,7 +19,7 @@
   {{this.project.assignedTo[0]}}, {{this.project.assignedTo[1]}}, and {{this.project.assignedTo.length - 2}} more are collaborating on this project.</div>
 
 <div class="buttons">
-  <div class="btn btn-block" (click)="filterTasks('Overview')" >Overview</div>
+  <div class="btn btn-block" (click)="filterTasks('All Tasks')" >All Tasks</div>
   <div class="small-space"></div>
   <div class="btn btn-block" (click)="filterTasks('My Tasks')">My Tasks</div>
   <div class="small-space"></div>
