--- a/src/app/task-editor/task-editor.component.html
+++ b/src/app/task-editor/task-editor.component.html
@@ -19,11 +19,11 @@
   </div>
   <div class="form-group">
     <label for="timeSpent">Time Spent (Hours):</label>
-    <input type="number" class="form-control" name="timeSpent" [(ngModel)]=="updatedTask.timeSpent">
+    <input type="number" class="form-control" name="timeSpent" [(ngModel)]="updatedTask.timeSpent">
   </div>
   <div class="form-group">
     <label for="timeLeft">Time Left (Hours):</label>
-    <input type="number" class="form-control" name="timeLeft" [(ngModel)]=="updatedTask.timeLeft">
+    <input type="number" class="form-control" name="timeLeft" [(ngModel)]="updatedTask.timeLeft">
   </div>
   <button type="button" class="btn btn-outline-primary btn-block" (click)="updateTask()">Update Task</button>
   <button type="button" class="btn btn-outline-danger btn-block" (click)="deleteTask()">Delete Task </button>
