--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-white">
-  <a class="navbar-brand">
+  <a class="navbar-brand" id="logo-container" (click)="viewProjectList()">
     <img src="../assets/DockitLogo.png" width="50" height="50" class="d-inline-block align-top" alt="Logo">
     <span id="title">
       Dockit
