--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -10,7 +10,7 @@
         <div class="time" *ngIf="(task.timeLeft > 0) && (task.timeLeft <= 1)">1 hour left</div>
         <div class="time" *ngIf="task.timeLeft != 1">{{task.timeLeft}} hours left</div>
     </div>
-    <div class="title clickable">{{task.title}}</div>
+    <div class="title clickable" (click)="this.editTask(task)">{{task.title}}</div>
     <div class="btn-group">
         <div class="btn" (click)="this.editTask(task)">Edit Task</div>
         <div class="btn" (click)="this.deleteTask(task)">Delete Task</div>
